<resources>
    <string name="app_name">Minesweeper</string>
    <string name="best_time">Best Time: %1$s sec</string>
    <string name="last_game_time">Last Game Time: %1$s sec</string>
    <string name="select_difficulty">Select Board With Difficulty</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="minesweeper">Minesweeper</string>
    <string name="hard">HARD</string>
    <string name="or">OR</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="mines">Mines</string>
    <string name="add_details">Add Details</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="restart">RESTART</string>
    <string name="time">Time</string>
    <string name="exit_game">Exit Game</string>
    <string name="exit_message">Do you want to exit game from this level</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>