<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="260dp">

    <TextView
        android:id="@+id/rows_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rows"
        android:textSize="16sp"
        android:textColor="@color/lavender"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/rows_label"
        app:layout_constraintTop_toBottomOf="@+id/rows_label" />

    <TextView
        android:id="@+id/cols_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/columns"
        android:textColor="@color/lavender"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/rows"
        app:layout_constraintTop_toBottomOf="@+id/rows" />

    <EditText
        android:id="@+id/cols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/cols_label"
        app:layout_constraintTop_toBottomOf="@+id/cols_label" />

    <TextView
        android:id="@+id/mines_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mines"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/lavender"
        app:layout_constraintStart_toStartOf="@+id/cols"
        app:layout_constraintTop_toBottomOf="@+id/cols" />

    <EditText
        android:id="@+id/mines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/mines_label"
        app:layout_constraintTop_toBottomOf="@+id/mines_label" />


</androidx.constraintlayout.widget.ConstraintLayout>